# se3_sqp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build-docker.sh  docker-build.sh  docker-run.sh  run-docker.sh
code/: CMakeLists.txt  sqp_optimization_plan.md
code/bindings/: bindings.cpp
code/docs/: FUTURE_OPTIMIZATIONS.md  TODO.md  compiler_and_docker_notes.md  plan_external_forces.md  sqp_pipeline.md
code/docs/ideas/: template_cost_constraint_wrapper.md
code/examples/: double_integrator_example.cpp  example_trajopt.cpp  franka_reaching.cpp  go2_trot.cpp  load_robot_example.cpp  test_hpipm_integration.cpp  verify_imports.cpp
code/examples/go2/: go2_jump.cpp  go2_stance.cpp  go2_stance_nick.cpp  go2_trot.cpp  go2_trot_mpc.cpp
code/include/common/: profiling.h  types.h  var_slice.h
code/include/qp_solver/: hpipm_solver.h  hpipm_wrapper_notes.md
code/include/sqp_solver/: multiple_shooting_notes.md  sqp_options.h  sqp_solver.h  sqp_statistics.h
code/include/trajopt/: node.h  node_factory.h  ocp.h  scheduler.h  stage.h
code/include/trajopt/constraints/: abstract_constraint.h  contact_constraint.h  frame_orientation_constraint.h  frame_translation_constraint.h  frame_velocity_constraint.h  friction_cone_constraint.h  inverse_dynamics.h  joint_limits_constraint.h
code/include/trajopt/constraints/integration_schemes/: euler.h  semi-euler.h
code/include/trajopt/costs/: abstract_cost.h  acceleration_cost.h  configuration_cost.h  force_cost.h  frame_acceleration_cost.h  frame_orientation_cost.h  frame_roll_pitch_cost.h  frame_translation_cost.h  frame_velocity_cost.h  step_cost.h  torque_cost.h  velocity_cost.h
code/include/trajopt/functions/: abstract_function.h  frame_acceleration.h  frame_orientation.h  frame_translation.h  frame_velocity.h  inverse_dynamics_function.h
code/python/: example_trajopt.py  frame_mpc.py  go2_mpc.py  go2_stance.py  visualize_trajectory.py
code/python/mujoco/: conversions.py  go2_sim.py  joint_impedance_ctrl.py  mujoco_viewer.py  reference_interpolator.py
code/python/utils/: interactive_marker.py  joy.py  plotter.py  rviser.py
code/resources/: pendubot.urdf
code/resources/mjcf/double_pendulum/: double_pendulum.xml
code/resources/mjcf/go2/: go2.xml
code/resources/mjcf/panda/: panda.xml
code/resources/trajectories/: franka_reaching.json  go2_jump.json  go2_stance.json  go2_trot.json  trajectory.json  trajectory_300_00_swingup_nocost.json  trajectory_300_01_cost+torque.json  trajectory_300_01_euler.json  trajectory_300_euler.json  trajectory_300_semi.json  trajectory_swingup.json
code/resources/urdf/: floating_frame.urdf  iiwa.urdf  pendulum.urdf  pendulum_point_mass.urdf
code/resources/urdf/a1/: a1.urdf
code/resources/urdf/double_pendulum/: double_pendulum.urdf  pendubot.urdf
code/resources/urdf/go2/: go2.urdf
code/resources/urdf/panda/: panda.urdf
code/resources/urdf/talos/: talos.urdf
code/src/: sqp_solver.cpp
code/src/qp_solver/: hpipm_solver.cpp
code/src/sqp_solver/: Problem.md  sqp_ls_filter.cpp  sqp_ls_merit.cpp  sqp_options.cpp  sqp_solver.cpp  sqp_statistics.cpp
code/src/trajopt/: node.cpp  ocp.cpp  scheduler.cpp
code/src/trajopt/constraints/: constraints.cpp  contact_constraint.cpp  frame_orientation_constraint.cpp  frame_translation_constraint.cpp  frame_velocity_constraint.cpp  friction_cone_constraint.cpp  inverse_dynamics.cpp  joint_limits_constraint.cpp
code/src/trajopt/constraints/integration_schemes/: euler.cpp  semi-euler.cpp
code/src/trajopt/costs/: acceleration_cost.cpp  configuration_cost.cpp  force_cost.cpp  frame_acceleration_cost.cpp  frame_orientation_cost.cpp  frame_roll_pitch_cost.cpp  frame_translation_cost.cpp  frame_velocity_cost.cpp  step_cost.cpp  torque_cost.cpp  velocity_cost.cpp
code/src/trajopt/functions/: abstract_function.cpp  frame_acceleration.cpp  frame_orientation.cpp  frame_translation.cpp  frame_velocity.cpp  inverse_dynamics_function.cpp
code/tests/: CMakeLists.txt
code/tests/constraints/: test_contact_constraint.cpp  test_friction_cone_constraint.cpp  test_inverse_dynamics.cpp  test_joint_limits_constraint.cpp
code/tests/costs/: test_configuration_cost.cpp  test_frame_orientation_cost.cpp  test_velocity_cost.cpp
code/tests/fixtures/: pinocchio_fixtures.h
code/tests/functions/: test_frame_translation.cpp
code/tests/integration_schemes/: test_euler_integration.cpp  test_semi-euler_integration.cpp
code/tests/node/: test_node_merit_derivatives.cpp
code/tests/sqp_solver/: test_sqp_pipeline.cpp
code/tests/utils/: numerical_differentiation.h
